# d2l-sync

./: Cargo.toml  Dockerfile  README.md
src/: main.rs  source.rs  sync.rs
src/schemas/: mod.rs
src/sync/: mod.rs
src/sync/schemas/: mod.rs
