[package]
name = "d2l"
version = "0.1.0"
authors = ["Charles Tabor <chastabor@gmail.com>"]

[profile.release]
lto = true

[dependencies]
lazy_static = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4"
hmac = "0.6"
sha2 = "0.7"
base64 = "0.9"
hyper = "0.12"
rustls = "0.13"
reqwest = "0.9"
mysql = "12.3.1"
